--- a/src/main/resources/assets/perfectplushies/lang/en_us.json
+++ b/src/main/resources/assets/perfectplushies/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "block.perfectplushies.fox_plushie": "Fox Plushie",
+  "block.perfectplushies.dolphin_plushie": "Dolphin Plushie",
 
-  "item.perfectplushies.fox_plushie": "Fox Plushie"
+  "item.perfectplushies.fox_plushie": "Fox Plushie",
+  "item.perfectplushies.dolphin": "Dolphin Plushie"
 }
