--- a/src/main/resources/assets/perfectplushies/lang/en_us.json
+++ b/src/main/resources/assets/perfectplushies/lang/en_us.json
@@ -1,7 +1,9 @@
 {
   "block.perfectplushies.fox_plushie": "Fox Plushie",
   "block.perfectplushies.dolphin_plushie": "Dolphin Plushie",
+  "block.perfectplushies.rabbit_plushie": "Rabbit Plushie",
 
   "item.perfectplushies.fox_plushie": "Fox Plushie",
-  "item.perfectplushies.dolphin": "Dolphin Plushie"
+  "item.perfectplushies.dolphin_plushie": "Dolphin Plushie",
+  "item.perfectplushies.rabbit_plushie": "Rabbit Plushie"
 }
