Add hippo, deer, and organize some things

--- a/src/main/resources/assets/perfectplushies/lang/en_us.json
+++ b/src/main/resources/assets/perfectplushies/lang/en_us.json
@@ -3,9 +3,13 @@
   "block.perfectplushies.dolphin_plushie": "Dolphin Plushie",
   "block.perfectplushies.rabbit_plushie": "Rabbit Plushie",
   "block.perfectplushies.frog_plushie": "Frog Plushie",
+  "block.perfectplushies.hippo_plushie": "Hippo Plushie",
+  "block.perfectplushies.deer_plushie": "Deer Plushie",
 
   "item.perfectplushies.fox_plushie": "Fox Plushie",
   "item.perfectplushies.dolphin_plushie": "Dolphin Plushie",
   "item.perfectplushies.rabbit_plushie": "Rabbit Plushie",
-  "item.perfectplushies.frog_plushie": "Frog Plushie"
+  "item.perfectplushies.frog_plushie": "Frog Plushie",
+  "item.perfectplushies.hippo_plushie": "Hippo Plushie",
+  "item.perfectplushies.deer_plushie": "Deer Plushie"
 }
