--- a/src/main/resources/assets/perfectplushies/lang/en_us.json
+++ b/src/main/resources/assets/perfectplushies/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.perfectplushies.deer_plushie": "Deer Plushie",
   "block.perfectplushies.bear_plushie": "Bear Plushie",
   "block.perfectplushies.dog_plushie": "Dog Plushie",
+  "block.perfectplushies.elephant_plushie": "Elephant Plushie",
 
   "item.perfectplushies.fox_plushie": "Fox Plushie",
   "item.perfectplushies.dolphin_plushie": "Dolphin Plushie",
@@ -15,5 +16,6 @@
   "item.perfectplushies.hippo_plushie": "Hippo Plushie",
   "item.perfectplushies.deer_plushie": "Deer Plushie",
   "item.perfectplushies.bear_plushie": "Bear Plushie",
-  "item.perfectplushies.dog_plushie": "Dog Plushie"
+  "item.perfectplushies.dog_plushie": "Dog Plushie",
+  "item.perfectplushies.elephant_plushie": "Elephant Plushie"
 }
