clean up, creative mod tab

--- a/src/main/resources/assets/perfectplushies/lang/en_us.json
+++ b/src/main/resources/assets/perfectplushies/lang/en_us.json
@@ -17,5 +17,7 @@
   "item.perfectplushies.deer_plushie": "Deer Plushie",
   "item.perfectplushies.bear_plushie": "Bear Plushie",
   "item.perfectplushies.dog_plushie": "Dog Plushie",
-  "item.perfectplushies.elephant_plushie": "Elephant Plushie"
+  "item.perfectplushies.elephant_plushie": "Elephant Plushie",
+
+  "itemGroup.perfectplushies.tab": "Perfect Plushies"
 }
