--- a/Common/src/main/resources/assets/perfectplushies/lang/es_es.json
+++ b/Common/src/main/resources/assets/perfectplushies/lang/es_es.json
@@ -1,20 +1,21 @@
 {
-    "block.perfectplushies.fox_plushie": "Peluche De Zorro",
-    "block.perfectplushies.dolphin_plushie": "Peluche De Delfín",
-    "block.perfectplushies.rabbit_plushie": "Peluche De Conejo",
-    "block.perfectplushies.frog_plushie": "Peluche De Rana",
-    "block.perfectplushies.hippo_plushie": "Peluche De Hipopótamo",
-    "block.perfectplushies.deer_plushie": "Peluche De Ciervo",
-    "block.perfectplushies.bear_plushie": "Peluche De Oso",
-    "block.perfectplushies.dog_plushie": "Peluche De Perro",
-    "block.perfectplushies.elephant_plushie": "Peluche De Elefante",
-    "item.perfectplushies.fox_plushie": "Peluche De Zorro",
-    "item.perfectplushies.dolphin_plushie": "Peluche De Delfín",
-    "item.perfectplushies.rabbit_plushie": "Peluche De Conejo",
-    "item.perfectplushies.frog_plushie": "Peluche De Rana",
-    "item.perfectplushies.hippo_plushie": "Peluche De Hipopótamo",
-    "item.perfectplushies.deer_plushie": "Peluche De Ciervo",
-    "item.perfectplushies.bear_plushie": "Peluche De Oso",
-    "item.perfectplushies.dog_plushie": "Peluche De Perro",
-    "item.perfectplushies.elephant_plushie": "Peluche De Elefante"
+    "block.perfectplushies.fox_plushie": "Peluche de Zorro",
+    "block.perfectplushies.dolphin_plushie": "Peluche de Delfín",
+    "block.perfectplushies.rabbit_plushie": "Peluche de Conejo",
+    "block.perfectplushies.frog_plushie": "Peluche de Rana",
+    "block.perfectplushies.hippo_plushie": "Peluche de Hipopótamo",
+    "block.perfectplushies.deer_plushie": "Peluche de Ciervo",
+    "block.perfectplushies.bear_plushie": "Peluche de Oso",
+    "block.perfectplushies.dog_plushie": "Peluche de Perro",
+    "block.perfectplushies.elephant_plushie": "Peluche de Elefante",
+    "item.perfectplushies.fox_plushie": "Peluche de Zorro",
+    "item.perfectplushies.dolphin_plushie": "Peluche de Delfín",
+    "item.perfectplushies.rabbit_plushie": "Peluche de Conejo",
+    "item.perfectplushies.frog_plushie": "Peluche de Rana",
+    "item.perfectplushies.hippo_plushie": "Peluche de Hipopótamo",
+    "item.perfectplushies.deer_plushie": "Peluche de Ciervo",
+    "item.perfectplushies.bear_plushie": "Peluche de Oso",
+    "item.perfectplushies.dog_plushie": "Peluche de Perro",
+    "item.perfectplushies.elephant_plushie": "Peluche de Elefante",
+    "itemGroup.perfectplushies.tab": "Peluches Perfectos"
 }
